<resources>
    <string name="app_name">FoodFit</string>
    <string name="app_description">В приложении FoodFit вы можете выбрать готовый рацион питания с заранее рассчитаной калорийностью. И получить подробный рецепт любого блюда из выбранного рациона</string>
    <string name="btn_forward">Далее</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="enter_weight">Укажите вес</string>
    <string name="hint_weight">Вес в килограммах</string>
    <string name="enter_height">Укажите рост</string>
    <string name="hint_height">Укажите рост в сантиметрах</string>
    <string name="enter_calories">Укажите дневную норму каллорий</string>
    <string name="hint_calories">Укажите количество каллорий</string>
    <string name="first_choose_gender">Сначала выберите пол</string>
    <string name="need_enter_weight">Необходимо указать вес</string>
    <string name="need_enter_height">Необходимо указать рост</string>
    <string name="need_enter_calories">Необходимо указать дневную норму калорий</string>
    <string name="choose_gender">Выберите пол</string>
    <string name="racion">Рацион</string>
    <string name="recipe">Рецепты</string>
    <string name="kcal">Ккал</string>
    <string name="kcal_and_value">Энергетическая ценность: %1$d ккал</string>
    <string name="protein_and_value">Белки: %1$d</string>
    <string name="fat_and_value">Жиры: %1$d</string>
    <string name="carb_and_value">Углеводы: %1$d</string>
    <string name="protein">Белки</string>
    <string name="fat">Жиры</string>
    <string name="carb">Углеводы</string>
    <string name="enter_recipe_name">Введите название рецепта</string>
    <string name="enter_racion_name">Введите название рациона</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>
    <string name="recipe_name_is_empty">Поле название рецепта не должно быть пустым</string>
    <string name="empty_search_list">Список рецептов пуст. Введите название рецепта в строку поиска и нажмите кнопку найти</string>
    <string name="error_request">По вашему запросу не найдено рецептов</string>
    <string name="toast_new_recipe">%1$s успешно добавлен к новому рациону</string>
    <string name="enter_weight_in_grams">Укажите вес в граммах</string>
    <string name="cancel">Отменить</string>
    <string name="need_enter_racion_name">Необходимо указать название рецепта</string>
    <string name="empty_recipe_list">Список рецептов пуст. Чтобы добавить новые рецепты, нажмите кноку добавить в нижнем правом углу экрана</string>
    <string name="error_loading_data">Ошибка загрузки данных</string>
    <string name="info">Инфо</string>
    <string name="weight">Вес</string>
    <string name="height">Рост</string>
    <string name="weight_kg">%1$s кг</string>
    <string name="height_sm">%1$s см</string>
    <string name="energy_kcal">%1$s ккал</string>
    <string name="background">Фон</string>
    <string name="back">Назад</string>
    <string name="create_racion">Создать рацион</string>
    <string name="male_gender">Мужской пол</string>
    <string name="female_gender">Женский пол</string>
    <string name="edit_weight">Изменить вес</string>
    <string name="edit_height">Изменить рост</string>
    <string name="edit_calories">Изменить норму каллорий</string>
    <string name="add_recipe">Добавить рецепт к рациону</string>
    <string name="recipe_logo">Изображение рецепта</string>
    <string name="find_recipe">Найти рецепт</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="ingredient_logo">Изображение ингредиента</string>
    <string name="racion_logo">Изображение рациона</string>
    <string name="background_calories">Фон поля каллории</string>
    <string name="background_protein">Фон поля белки</string>
    <string name="background_fat">Фон поля жиры</string>
    <string name="background_carbs">Фон поля углеводы</string>
    <string name="energy_normal">Суточная калорийность</string>
    <string name="clear_recipe_search">Очистить поле поиска рецептов</string>
    <string name="dialog_title">Ошибка</string>
    <string name="dialog_text">Отсутствует подключение к сети интернет.</string>
    <string name="btn_check_internet">Проверить</string>
    <string name="request_perms_title">Запрос разрешения на показ уведомлений</string>
    <string name="allow">Разрешить</string>
    <string name="dis_allow">Запретить</string>
    <string name="request_dialog_text">Разрешите получение уведомлений, чтобы быть в курсе новых рецептов и рационов.</string>

</resources>