<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="50dp"
    android:background="@drawable/dialog_background"
    >
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/dialog_title_background"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/enter_weight_in_grams"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        android:inputType="number"
        android:textSize="30sp"
        android:gravity="center"
        />
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etWeight"
        android:backgroundTint="@color/red_a_700"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etWeight"
        android:backgroundTint="@color/green_a400"
        android:textColor="@color/white"
        android:text="@string/save"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>