<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.quiz.WeightFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/quiz_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/tvEnterWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:fontFamily="@font/playfair_display"
        android:text="@string/enter_weight"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnterWeight"
        app:layout_constraintBottom_toTopOf="@id/btnForward"
        android:hint="@string/hint_weight"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/btnForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/btn_forward"
        android:textColor="@color/black"
        android:fontFamily="@font/playfair_display"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:background="@drawable/btn_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>