<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_marginTop="5dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivRecipeLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/img_placeholder"
            android:contentDescription="@string/recipe_logo"
            />

        <TextView
            android:id="@+id/tvRecipeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tvKcal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kcal_and_value"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRecipeName"
            android:gravity="center"
            android:fontFamily="@font/playfair_display"
            android:background="@drawable/kcal_background"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/tvProtein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/protein_and_value"
            android:textColor="@color/green_a400"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintTop_toBottomOf="@id/tvKcal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tvFat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fat_and_value"
            android:textColor="@color/purple_a_400"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintTop_toBottomOf="@id/tvProtein"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tvCarb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/carb_and_value"
            android:textColor="@color/indigo_a_400"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintTop_toBottomOf="@id/tvFat"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />

        <ProgressBar
            android:id="@+id/chartProtein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvProtein"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvProtein"
            app:layout_constraintBottom_toBottomOf="@id/tvProtein"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:progressDrawable="@drawable/protein_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:max="100"
            />

        <ProgressBar
            android:id="@+id/chartFat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvFat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvFat"
            app:layout_constraintBottom_toBottomOf="@id/tvFat"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:progressDrawable="@drawable/fat_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:max="100"
            />

        <ProgressBar
            android:id="@+id/chartCarb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvCarb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvCarb"
            app:layout_constraintBottom_toBottomOf="@id/tvCarb"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:progressDrawable="@drawable/carb_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:max="100"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>