<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.quiz.GenderFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/quiz_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/tvSelectGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:fontFamily="@font/playfair_display"
        android:text="@string/choose_gender"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/maleIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMale"
        app:layout_constraintBottom_toBottomOf="@id/tvMale"
        android:src="@drawable/male_icon"
        />

    <TextView
        android:id="@+id/tvMale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/maleIcon"
        app:layout_constraintEnd_toStartOf="@id/vert50"
        app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
        android:layout_marginTop="50dp"
        android:text="@string/male"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:fontFamily="@font/playfair_display"
        android:background="@drawable/btn_inactive_background"
        android:paddingStart="20dp"
        android:paddingVertical="10dp"
        android:textStyle="bold"
        android:textSize="19sp"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/femaleIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/vert50"
        app:layout_constraintTop_toTopOf="@id/tvFemale"
        app:layout_constraintBottom_toBottomOf="@id/tvFemale"
        android:src="@drawable/female_icon"
        />

    <TextView
        android:id="@+id/tvFemale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/femaleIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/female"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:fontFamily="@font/playfair_display"
        android:background="@drawable/btn_inactive_background"
        android:textSize="19sp"
        android:paddingStart="20dp"
        android:paddingVertical="10dp"
        android:textStyle="bold"
        android:singleLine="true"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/btnForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/btn_forward"
        android:textColor="@color/black"
        android:fontFamily="@font/playfair_display"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:background="@drawable/btn_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>