<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.new_racion.recipe_search.RecipeSearchFragment">

    <EditText
        android:id="@+id/etRecipeSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSearch"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_recipe_name"
        />

    <ImageView
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etRecipeSearch"
        app:layout_constraintBottom_toBottomOf="@id/etRecipeSearch"
        android:layout_marginEnd="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipeList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRecipeSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tvEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/playfair_display"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/empty_search_list"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tvErrorRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/playfair_display"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/error_request"
        android:padding="10dp"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>