<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/backgroundTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.3"
        android:src="@drawable/main_background_top"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:id="@+id/backgroundBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        android:src="@drawable/main_background_bottom"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/appLogo"
        android:fontFamily="@font/playfair_display"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@mipmap/ic_launcher"
        />

    <TextView
        android:id="@+id/tvAppDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        android:layout_marginHorizontal="50dp"
        android:text="@string/app_description"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/playfair_display"
        />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppDescription"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/btnForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppDescription"
        android:layout_marginTop="20dp"
        android:text="@string/btn_forward"
        android:fontFamily="@font/playfair_display"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:background="@drawable/btn_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>